--- a/shared.css
+++ b/shared.css
@@ -42,3 +42,29 @@
     color: #ffffff;
 }
 
+.navbar button{
+    background-color: rgb(0, 120, 190);
+    border-radius: 30px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    font-family: "TheMixSemiBold-Plain";
+    font-size: 13.6px;
+    font-style: normal;
+    font-weight:400;
+    padding:0px 13.6px 0px 13.6px;
+    height:40px;
+    line-height: 40px;
+    text-decoration-style: solid;
+    text-decoration-thickness: auto;
+    text-size-adjust: 100%;
+    text-transform: uppercase;
+    transition-behavior: normal;
+    transition-delay: 0s;
+    transition-duration: 0.2s;
+    transition-property:all;
+    transition-timing-function: linear;
+    width:100px
+ 
+
+}
+
