changing the brightness of the background image and the weight of the fonts

--- a/home.css
+++ b/home.css
@@ -1,4 +1,10 @@
+
+ 
+  
+
+
 .homeImage{
-    background-image: url(images/slide1.jpg) ;
-    height:1024px
+    background-image: url(images/slide2.jpg) ;
+    height:1024px;
+    filter:brightness(80%)
 }
