--- a/shared.css
+++ b/shared.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "TheMixSemiBold-Plain";
+    src: url("fonts/TheMixSemiBold-Plain.otf");
+  }
+
+
+
 *{
     padding:0;
     margin:0;
@@ -9,13 +16,12 @@
 .navbar{
     padding:20px;
     display: flex;
-    background-color: grey;
+    /*background-color: grey;*/
     flex-direction: row;
     object-fit: cover;
+   
 
     
-    
-
 }
 
 
@@ -39,7 +45,10 @@
     margin:15px;
     font-family:"TheMixSemiBold-Plain";
     font-size: 0.85rem;
+    font-weight: 500;
     color: #ffffff;
+    text-transform: uppercase;
+    line-height: 3rem;
 }
 
 .navbar button{
@@ -58,13 +67,15 @@
     text-decoration-thickness: auto;
     text-size-adjust: 100%;
     text-transform: uppercase;
-    transition-behavior: normal;
     transition-delay: 0s;
     transition-duration: 0.2s;
     transition-property:all;
     transition-timing-function: linear;
-    width:100px
+    width:100px;
+    margin:10px
  
 
 }
+
+
 
