--- a/home.css
+++ b/home.css
@@ -72,8 +72,9 @@ width:100%;
 }
 
 .boxes > div{
-
+padding:20px;
 display:flex;
+align-items: center;
 
 flex-direction: column; 
 width:250px;
@@ -82,4 +83,26 @@ background-color: white;
 
 
 
+}
+
+.boxes > div > img{
+    width: 80px;
+    height: 80px;
+}
+
+.boxes > div > h3{
+
+    color:  Black;
+    font-family:"TheMixSemiBold-Plain";
+    font-weight:800;
+    font-size:20px;
+}
+
+
+.boxes > div > p{
+
+    color:  Black;
+    font-family:"TheMixSemiBold-Plain";
+    font-weight:200;
+    font-size:10px;
 }
